Fix: re-align with master - cache includes.

--- a/jekyll/_sass/_sidebar.scss
+++ b/jekyll/_sass/_sidebar.scss
@@ -1,5 +1,4 @@
 $sidebar-spacing-base: 5px;
-$sidebar-width: 260px;
 
 .sidebar-wrapper {
   width: $leftbar-width;
